# bookstore_2

./: .catalystrc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  heroku.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json  wsgi.py
.github/: build.yml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  wsgi.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_alter_category_description.py  0003_rename_categories_product_category_and_more.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
