[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["cardrocha <cardrocharj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
factory-boy = "^3.3.0"
Django = "^4.2.6"
djangorestframework = "^3.13.1"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
psycopg2 = "^2.9"
flake8 = "^6.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
